# fantastic-engine

./: .gitignore  10.md  11.md  12.md  13.md  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.md  9.md  Hi.txt  README.md  Yo.txt  agents.md  implementation_plan.md  new.md  planning.md  progress.md  pyproject.toml  response.md
docs/: ACCEPTANCE_TESTS.md  ARCHITECTURE.md  COPILOT_RUNTIME_BOUNDARY.md  COPILOT_SOP_AUTHORING_PROMPT.md  COPILOT_SOP_AUTHORING_PROTOCOL.md  COPILOT_TASK_PROMPT.md  COPILOT_TASK_PROTOCOL.md  DOMAIN_MODEL.md  MAC_POC_RUNBOOK.md  POC_SCOPE.md  PRODUCT_REQUIREMENTS.md
response/: deadline_rescue_independent_audit.md  milestone1_deadline_rescue.md  milestone1_independent_diagnosis.md
scripts/: run.py
src/sop_automation/: __init__.py  __main__.py  cli.py  config.py  errors.py
tests/fixtures/: deferred_branch.json  invalid_dependency_cycle.json  local_fixture_app.py  sample_compiled_sop.json  sample_nl_sop.txt  sample_run_state.json  sample_sop.csv  sample_sop_data.json  valid_interpretation_result.json
tests/unit/: test_action_dispatcher.py  test_auth_route_playwright.py  test_cli.py  test_command_queue.py  test_compilation.py  test_condition_evaluator.py  test_fixture_app.py  test_models.py  test_page_preparation.py  test_phase1_cli.py  test_playwright_fixture.py  test_preprocessing.py  test_run_manager.py  test_runtime_host.py  test_runtime_reliability.py  test_runtime_smoke.py  test_runtime_textbox_playwright.py  test_secret_persistence.py  test_sop_selector.py  test_storage.py  test_task_intent.py  test_task_plan.py  test_validation.py  (+2 more)
(+34 files in other folders)
