[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sop-automation"
version = "0.1.0"
description = "Generic POC for operating browser-based business applications from validated SOPs"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "openpyxl>=3.1",
    "playwright>=1.40",
    "rich>=13.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
sop = "sop_automation.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "playwright: marks tests that require a real browser (deselect with '-m not playwright')",
]
